package com.netcracker.unc.commands.interfaces;


public interface ICommand {
    void execute();
}
