package com.netcracker.unc.commands.interfaces;


public interface IElevatorCommand extends ICommand {
}
