package com.netcracker.unc.commands.interfaces;


public interface IFloorCommand extends ICommand {
}
