package com.netcracker.unc.commands.interfaces;

public interface IPassengerCommand extends ICommand {
}
