package com.netcracker.unc.visualization.elements;


public interface IPicture {

    String draw(int line);
}
