package logic.interfaces.buttons;

public interface IFloorButton {
    void callElevatorToDown();

    void callElevatorToUp();
}
